# lambda-managed-instances

./: .gitignore  Cargo.toml  README.md  deploy.sh  test.sh
.cargo/: config.toml
src/: event_handler.rs  main.rs
