[package]
name = "lambda-function"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
 
[dependencies]
lambda_runtime = { version = "1.1.2", features = ["concurrency-tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 
[profile.release]
opt-level = 3
lto = "fat"             # Cross-crate inlining; slower build, faster binary
codegen-units = 1       # Single CGU maximises optimisation passes
strip = true
panic = "abort"         # Smaller binary, no unwinding overhead